--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/style.css",
+              "src/assets/css/bootstrap.custom.min.css",
+              "src/assets/css/home_1.css",
+              "src/assets/css/checkout.css",
+              "src/assets/css/custom.css"
             ],
-            "scripts": []
+            "scripts": [
+            ]
           },
           "configurations": {
             "production": {
