--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,8 @@
               "src/assets/css/style.css",
               "src/assets/css/bootstrap.custom.min.css",
               "src/assets/css/home_1.css",
+              "src/assets/css/product_page.css",
+              "src/assets/css/listing.css",
               "src/assets/css/checkout.css",
               "src/assets/css/custom.css"
             ],
