--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
+    "ionicons": "^5.0.1",
     "jquery": "^3.5.0",
     "path": "^0.12.7",
     "rxjs": "~6.5.4",
