--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
+    "google-translate": "^3.0.0",
     "ionicons": "^5.0.1",
     "jquery": "^3.5.0",
     "path": "^0.12.7",
